add more link text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
     <body>
         <h1> RUN BUDDY</h1>
-        What We DO
+        What We Do What you Do your Traners Reach Out
     </body>
 </html>
