added css style sheet and styled page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html land = "en">
 
+<head>
+  <meta charset="UTF-8" />
+  <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+
 <!-- navigation -->
 <header>
-    <h1> <a href="/">RUN BUDDY</a></h1>
+    <h1>RUN BUDDY</h1> 
     <nav>
         <!-- Unordered list element-->
         <ul>
