--- a/index.html
+++ b/index.html
@@ -31,7 +31,32 @@
   </header>
   
   <!-- hero/jumbotron -->
-  <section>
+  <section class="hero">
+    <div class="hero-form">
+      <h3> Get Started Today</h3>
+      <p>Fill out this form and one of our trainers will schedule a consult</p>
+    <form>
+      <label for="name"> Enter full name:</label>
+      <input type="text" placeholder="Your Name" name="name" id="name" />
+      <label for="email">Enter email address:</label>
+      <input type="text" placeholder="Email Address" name="email" id="email" />
+      <label for="phone">Enter a telephone number:</label>
+      <input type="text" placeholder="Phone Number" name="phone" id="phone"/>
+      <p>
+        Have you worked out with a trainder before?
+        <input type="radio" name="trainer-confirm" id="trainder-yes"/>
+        <label for="trainer-yes">Yes</label>
+        <input type="radio" name="trainer-confirm" id="trainer-no" />
+        <label for="trainer-no">No</label>
+      </p>
+      <p>
+       <label for="checkbox" >
+        I acknowledge that I am at least 18 years of age.
+       </label>
+       <input type="checkbox" name="age-confirm" id="checkbox" />
+      </p>
+    </form>  
+    </div>
   </section>
   
   <!-- "what we do" section -->
@@ -57,6 +82,10 @@
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
+    <div> 
+      <a href="#">Read Our Privacy Policy</a><br />
+      &copy; 2019 Run Buddy, Inc.
+    </div>
   </footer>
 
 </html>
