--- a/index.html
+++ b/index.html
@@ -51,17 +51,21 @@
       <input type="text" placeholder="Phone Number" name="phone" id="phone"/>
       <p>
         Have you worked out with a trainder before?
-        <input type="radio" name="trainer-confirm" id="trainder-yes"/>
-        <label for="trainer-yes">Yes</label>
-        <input type="radio" name="trainer-confirm" id="trainer-no" />
-        <label for="trainer-no">No</label>
+        <span class="radio-wrapper">
+          <input type="radio" name="trainer-confirm" id="trainer-yes" />
+          <label for="trainer-tes">Yes</label>
+        </span>
+        <span class="radio-wrapper">
+          <input type="radio" name="trainer-confirm" id="trainer-no" />
+          <label for="trainer-no">No</label>
+        </span>
       </p>
       <p>
-       <label for="checkbox" >
-        I acknowledge that I am at least 18 years of age.
-       </label>
-       <input type="checkbox" name="age-confirm" id="checkbox" />
-      </p>
+        <span class="checkbox-wrapper">
+          <input type="checkbox" name="age-confirm" id="checkbox" />
+          <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+        </span>
+      </p>  
     </form>  
     </div>
   </section>
